# api-discovery

./: README.rst  requirements.txt  setup.cfg  setup.py
discovery/: __init__.py
discovery/api/: app.py  app.wsgi  config.py  expose.py  hooks.py
discovery/api/controllers/: base.py  link.py  root.py
discovery/api/controllers/v1/: __init__.py  apis.py
discovery/api/middleware/: __init__.py  parsable_error.py
discovery/cmd/: api.py
discovery/common/: exception.py  i18n.py  service.py
discovery/conf/: __init__.py  api.py  default.py  opts.py
