[metadata]
name = api-discovery
summary = API Discovery Service
description-file =
    README.rst
author = Zhenguo Niu
author-email = niu.zglinux@gmail.com
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    discovery

[entry_points]
wsgi_scripts =
    api-discovery-wsgi = discovery.api.app:build_wsgi_app

console_scripts =
    api-discovery = discovery.cmd.api:main
